[package]
name = "interactive"
version = "0.1.0"
edition = "2021"
authors = ["Amiya Behera <amiyatulu@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.7.0", features = ["csr", "nightly"] }
leptos_meta = { version = "0.7.0" }
leptos_router = { version = "0.7.0" }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
rand = { version = "0.8.5" }
getrandom = { version = "0.2", features = ["js"] }
leptos-use = "0.14.0"
leptos_icons = "0.4.0"
codee = "0.2.0"
icondata = "0.5.0"
wasm-bindgen = "0.2"
web-sys = "0.3"
pulldown-cmark = "0.12.2"
# utils
# strum = { version = "0.25", features = ["derive", "strum_macros"] }
# strum_macros = "0.25"


[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["Document", "Window"] }


[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
